--- a/ncmb-core/build.gradle
+++ b/ncmb-core/build.gradle
@@ -3,10 +3,6 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
-version = '4.0.2'
-group = 'com.nifcloud.mbaas'
-
-
 buildscript {
     repositories {
         google()
@@ -18,6 +14,16 @@ buildscript {
     }
 }
 
+//plugins{
+//    id 'com.android.library'
+//    id 'maven'
+//    id 'maven-publish'
+//    id 'signing'
+//}
+
+version = '4.0.2'
+group = 'com.nifcloud.mbaas'
+
 allprojects {
     repositories {
         google()
@@ -25,6 +31,7 @@ allprojects {
         gradlePluginPortal()
     }
 }
+
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
@@ -46,15 +53,18 @@ android {
         lintConfig file("lint.xml")
     }
 }
+
 repositories {
-    google() //これが使えていないのかも！！！！
+    google()
+    mavenCentral()
+    gradlePluginPortal()
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.firebase:firebase-messaging:22.0.0'
     implementation 'com.google.android.gms:play-services-base:17.6.0'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.3.1'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
@@ -83,8 +93,6 @@ task makeJar(type: Copy) {
     rename('classes.jar', JAR_NAME)
 }
 makeJar.dependsOn(clearJar, build)
-
-
 
 //task javadocJar(type: Jar) {
 //    classifier = 'javadoc'
